--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.12.2",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs-core": "^4.17.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "axios": "^1.6.8",
@@ -19,6 +22,7 @@
     "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   }
